# learning-wgpu-rs

./: Cargo.toml  README.md  \
shaders/: capture.frag  capture.frag.spv  capture.vert  capture.vert.spv  compile.sh  scene.frag  scene.frag.spv  scene.vert  scene.vert.spv
src/: main.rs
