[package]
name = "learning-wgpu-rs"
version = "0.1.0"
authors = ["David Schwarz <dsdavidschwarz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.2"
env_logger = "0.7.1"
wgpu = "0.6.0"
futures = "0.3.6"
log = "0.4.11"
bytemuck = { version = "1.4.1", features = ["derive"]}
cgmath = "0.17.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"

